# LLMTeacherTool

./: app.py  pyproject.toml
src/doc_analyzer/: README.md  analyzer.py  cli.py
src/llm_teacher_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
